update API admin
