# internal/model/user.go
@@ -35,3 +35,8 @@ type AuthResponse struct {
 	Role     UserRole `json:"role"`
 	Token    string   `json:"token"`
 }
+
+type ChangePasswordRequest struct {
+	OldPassword string `json:"old_password" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required,min=6"`
+}
